#30 improve repsonse and request blackhawk
