# public-api/delivery/http/handler/public-api.go
@@ -126,43 +126,43 @@ func (ph *PublicHandler) CheckStok(c *fiber.Ctx) (err error) {
 	return c.SendStatus(fasthttp.StatusOK)
 }
 func (ph *PublicHandler) BlackHawk(c *fiber.Ctx) (err error) {
+	var request domain.JsonRequest
+	if err := c.BodyParser(&request); err != nil {
+		log.Println(err)
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "Invalid JSON format"})
+	}
+
 	response := domain.ResponseBlackHawk{
 		Header: domain.ResponseHeaderDetailBlackHawk{
 			Detail: domain.ResponseHeaderContentBlackHawk{
-				ProductCategoryCode: "01",
-				SpecVersion:         "46",
+				ProductCategoryCode: request.Header.Details.ProductCategoryCode,
+				SpecVersion:         request.Header.Details.SpecVersion,
 				StatusCode:          "00",
 			},
-			Signature: "BHNUMS",
+			Signature: request.Header.Signature,
 		},
 
 		Transaction: domain.ResponseTransactionBlackHawk{
-			AcquiringInstitutionIdentifier: "60300000063",
+			AcquiringInstitutionIdentifier: request.Transaction.AcquiringInstitutionID,
 			AdditionalTxnFields: domain.ResponseAdditionalTxnFieldsTransactionBlackHawk{
 				ActivationAccountNumber:       "6039537201000000000",
 				BalanceAmount:                 "C000000002500",
-				CorrelatedTransactionUniqueId: "9WKNNBT0QBGTWWNW0DJBSPRYZ4",
+				CorrelatedTransactionUniqueId: request.Transaction.AdditionalTxnFields.CorrelatedTransactionUniqueId,
 				ExpiryDate:                    "491201",
-				PaymentDetails: domain.ResponsePaymentBlackHawk{
-					PaymentDetail: domain.ResponsePaymentDetailBlackHawk{
-						PaymentMode: "051",
-						TenderType:  "Credit Card",
-					},
-				},
-				ProductId:               "07675004390",
-				RedemptionAccountNumber: "XXBNC5HR7ZPN43GQ",
-				RedemptionPin:           "1234      ",
-				TransactionUniqueId:     "9WKNNBT0QBGTWWNW0DJBSPRYZ4",
+				ProductId:                     request.Transaction.AdditionalTxnFields.ProductId,
+				RedemptionAccountNumber:       "XXBNC5HR7ZPN43GQ",
+				RedemptionPin:                 "1234      ",
+				TransactionUniqueId:           request.Transaction.AdditionalTxnFields.TransactionUniqueId,
 			},
 			AuthIdentificationResponse: "123456",
-			LocalTransactionDate:       "230414",
-			LocalTransactionTime:       "082515",
-			MerchantCategoryCode:       "5411",
-			MerchantIdentifier:         "60300000063    ",
-			MerchantTerminalId:         "06220     900   ",
-			PointOfServiceEntryMode:    "011",
-			PrimaryAccountNumber:       "9877890000000000",
-			ProcessingCode:             "745400",
+			LocalTransactionDate:       request.Transaction.LocalTransactionDate,
+			LocalTransactionTime:       request.Transaction.LocalTransactionTime,
+			MerchantCategoryCode:       request.Transaction.MerchantCategoryCode,
+			MerchantIdentifier:         request.Transaction.MerchantID,
+			MerchantTerminalId:         request.Transaction.MerchantTerminalID,
+			PointOfServiceEntryMode:    request.Transaction.PointOfServiceEntryMode,
+			PrimaryAccountNumber:       request.Transaction.PrimaryAccountNumber,
+			ProcessingCode:             request.Transaction.ProcessingCode,
 			ReceiptsFields: domain.ResponseReceiptsFieldsBlackHawk{
 				Lines: []string{
 					"StoreId : 06220",
@@ -184,12 +184,12 @@ func (ph *PublicHandler) BlackHawk(c *fiber.Ctx) (err error) {
 				},
 			},
 			ResponseCode:             "00",
-			RetrievalReferenceNumber: "000000661586",
-			SystemTraceAuditNumber:   "499180",
+			RetrievalReferenceNumber: request.Transaction.RetrievalReferenceNumber,
+			SystemTraceAuditNumber:   request.Transaction.SystemTraceAuditNumber,
 			TermsAndConditions:       "Terms and Conditions of the card will be displayed in this area. The maximum characters allowed are nine hundred and ninety-nine (999). Terms and Conditions of the card will be displayed in this area. The maximum characters allowed are nine hundred and ninety-nine (999). Terms and Conditions of the card will be displayed in this area. The maximum characters allowed are nine hundred and ninety-nine (999). Terms and Conditions of the card will be displayed in this area. The maximum characters allowed are nine hundred and ninety-nine (999). Terms and Conditions of the card will be displayed in this area. The maximum characters allowed are nine hundred and ninety-nine (999). Terms and Conditions of the card will be displayed in this area. The maximum characters allowed are nine hundred and ninety-nine (999). Terms and Conditions of the card will be displayed in this area. The maximum characters allowed are nine hundred and ninety-nine (999). Terms and Conditions will be displayed here.",
-			TransactionAmount:        "000000002500",
-			TransactionCurrencyCode:  "840",
-			TransmissionDateTime:     "230414082515",
+			TransactionAmount:        request.Transaction.TransactionAmount,
+			TransactionCurrencyCode:  request.Transaction.TransactionCurrencyCode,
+			TransmissionDateTime:     request.Transaction.TransmissioDateTime,
 		},
 	}
 
